# cartoon-rent-api

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoints.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: test-coverage.yaml
cartoon_rent_api/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
fixtures/: user_role_permission.json
rental_management/: apps.py
rental_management/access_policies/: book_api_access_policy.py  book_return_api_access_policy.py  book_review_api_access_policy.py  global_api_access_policy.py  rent_api_access_policy.py  rental_api_access_policy.py  tag_api_acces_policy.py
rental_management/enums/: book_status_type.py  rent_status_type.py
rental_management/migrations/: 0001_initial.py  0002_booktagbinding_unique_tag_per_book_record.py  0003_remove_tag_id_tag_tag_id.py  0004_alter_bookreview_user_id.py  0005_alter_book_created_by.py  0006_alter_book_options_alter_bookreview_options_and_more.py  0007_alter_renthistorymodel_status.py
rental_management/models/: __init__.py  book_model.py  book_review_model.py  book_tag_binding_model.py  rent_history_model.py  tag_model.py
rental_management/services/: book_service.py
rental_management/urls/: __init__.py  book_url.py  tag_url.py
user_management/: admin.py  apps.py
user_management/access_policies/: user_setting_access_policy.py  user_viewset_access_policy.py
user_management/migrations/: 0001_initial.py  0002_userrolepermissionbinding_unique_permission_per_role.py  (+3 more)
(+51 files in other folders)
