[project]
name = "cartoon-rent-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Phupha"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-dataclasses (>=1.4.0,<2.0.0)",
    "model-bakery (>=1.20.5,<2.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-health-check (>=3.20.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-annotations (>=3.1.1,<4.0.0)",
    "flake8-eradicate (>=1.5.0,<2.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = true
extend-exclude = '''\/migrations\/'''

[tool.isort]
profile = "black"
line_length = 120
